Translate to spanish some text

--- a/post.hbs
+++ b/post.hbs
@@ -58,7 +58,7 @@
                 {{#if bio}}
                     <p>{{bio}}</p>
                 {{else}}
-                    <p>Read <a href="{{url}}">more posts</a> by this author.</p>
+                    <p>Lee <a href="{{url}}">más posts</a> de este autor.</p>
                 {{/if}}
                 <div class="author-meta">
                     {{#if location}}<span class="author-location icon-location">{{location}}</span>{{/if}}
@@ -71,7 +71,7 @@
         {{/primary_author}}
 
             <section class="share">
-                <h4>Share this post</h4>
+                <h4>Comparte este post</h4>
                 <a class="icon-twitter" href="https://twitter.com/share?text={{encode title}}&amp;url={{url absolute="true"}}"
                     onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
                     <span class="hidden">Twitter</span>
