--- a/tag.hbs
+++ b/tag.hbs
@@ -5,9 +5,9 @@
 
 <header class="main-header tag-head inner ">
   <h1 class="page-title typl8-beta ">{{tag.name}}</h1>
-  <h2 class="page-description typl8-delta">A {{pagination.total}}-post collection</h2>
+  <h2 class="page-description typl8-delta">Colección de {{pagination.total}} posts</h2>
   <br>
-  <a class="icon-feed tdn" href="{{@site.url}}/tag/{{tag.slug}}/rss/"> RSS</a>               <em>feed of posts tagged <strong>{{tag.name}}</strong></em>
+  <a class="icon-feed tdn" href="{{@site.url}}/tag/{{tag.slug}}/rss/"> RSS</a> <em>feed de posts con tag: <strong>{{tag.name}}</strong></em>
 </header>
 
 {{! The main content area on the homepage }}
