--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -781,8 +781,8 @@ nav button {
   text-transform: none;
   font-weight: 400;
   font-family: "Source Serif Pro", Georgia, serif;
-  padding: 0.55rem 1.65rem 0rem 0;
-  padding-right: 50px; /* Hack to prevent menu icon from overlapping really long titles */
+  padding: 0.55rem 0rem 0rem 0;
+  padding-right: 0px; /* 50px Hack to prevent menu icon from overlapping really long titles */
   margin-bottom: 0;
   box-sizing: border-box;
 }
